--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
             validation_level: 2
 
           - name: 🪟 Windows (MSVC - Debug)
-            os: windows-latest
+            os: windows-2019
             platform: windows
             arch: x86_64
             build_type: Debug
@@ -62,7 +62,7 @@ jobs:
             build_test: ON
             validation_level: 2
           - name: 🪟 Windows (MSVC [32-bit] - Debug)
-            os: windows-latest
+            os: windows-2019
             platform: windows
             arch: x86
             build_type: Debug
@@ -71,7 +71,7 @@ jobs:
             build_test: OFF
             validation_level: 2
           - name: 🪟 Windows (MSVC - Release)
-            os: windows-latest
+            os: windows-2019
             platform: windows
             arch: x86_64
             build_type: Release
@@ -79,7 +79,7 @@ jobs:
             build_test: ON
             validation_level: 2
           - name: 🪟 Windows (MSVC, Shared - Release)
-            os: windows-latest
+            os: windows-2019
             platform: windows
             arch: x86_64
             build_type: Release
