--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Install Dependencies (macOS)
         if: matrix.platform == 'macos'
         run: |
-          brew install ccache ninja xerces-c
+          brew install ccache xerces-c
 
       - name: Install Dependencies (Linux)
         if: matrix.platform == 'linux'
@@ -118,7 +118,7 @@ jobs:
         if: matrix.platform == 'windows'
         uses: conda-incubator/setup-miniconda@v3
         with:
-          channels: conda-forge
+          channels: conda-forge,defaults
 
       - name: Install More Dependencies (Windows)
         if: matrix.platform == 'windows'
