{test} Move DIST extension test code to own file

--- a/test/src/CMakeLists.txt
+++ b/test/src/CMakeLists.txt
@@ -4,9 +4,11 @@
 target_sources( ${PROJECT_NAME}
     PRIVATE
         main.cpp
+        Helpers.cpp
         RandomNum.cpp
         TestData.cpp
         test_ImageFile.cpp
+        test_extension_DIST.cpp
         test_SimpleData.cpp
         test_SimpleReader.cpp
         test_SimpleWriter.cpp
