Move DIST extension struct into new header for extensions
(Also remove test that was moved in last commit.)

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -3,9 +3,10 @@
 
 target_sources( ${PROJECT_NAME}
 	PRIVATE
-		E57Exception.h
+	    E57Exception.h
 		E57Format.h
 		E57SimpleData.h
+		E57SimpleDataExtensions.h
 		E57SimpleReader.h
 		E57SimpleWriter.h
 		E57Version.h
@@ -13,18 +14,19 @@ target_sources( ${PROJECT_NAME}
 
 install(
 	FILES
-		E57Format.h
+	    E57Format.h
 		E57Exception.h
 		E57SimpleData.h
+		E57SimpleDataExtensions.h
 		E57SimpleReader.h
 		E57SimpleWriter.h
 		E57Version.h
 	DESTINATION
-		include/E57Format
+	    include/E57Format
 )
 
 target_include_directories( ${PROJECT_NAME}
 	PUBLIC
-		$<INSTALL_INTERFACE:include/E57Format>
+	    $<INSTALL_INTERFACE:include/E57Format>
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
